--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="theme-color" content="#0b1220" />
   <title>Calorie Quest</title>
 
-  <!-- PWA manifest (inline via data URL so we keep 4 files total) -->
+  <!-- Minimal manifest (kept inline so you still have 4 files total) -->
   <link rel="manifest" href="data:application/manifest+json,{
     &quot;name&quot;:&quot;Calorie Quest&quot;,
     &quot;short_name&quot;:&quot;CalorieQuest&quot;,
@@ -109,7 +109,7 @@
 
       <div class="row">
         <button class="btn primary grow" id="btnLog">Log it ✔️</button>
-        <button class="btn ghost grow" id="btnHelp">Help 🤔</button>
+        <button class="btn ghost grow" id="btnHelp">Help 🤖</button>
       </div>
 
       <div class="hr"></div>
@@ -187,8 +187,6 @@
         <div class="hr"></div>
         <div id="analyticsKpis" class="kpi3"></div>
       </div>
-
-      <div class="card mt hidden" id="helpPanel"></div>
     </section>
   </main>
 
