--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="theme-color" content="#0b1220" />
   <title>Calorie Quest</title>
 
-  <!-- Minimal manifest (kept inline so you still have 4 files total) -->
+  <!-- Minimal manifest (inline so we stay at 4 files) -->
   <link rel="manifest" href="data:application/manifest+json,{
     &quot;name&quot;:&quot;Calorie Quest&quot;,
     &quot;short_name&quot;:&quot;CalorieQuest&quot;,
@@ -27,8 +27,8 @@
       <div class="subtitle">Free PWA calorie + macro tracker (offline-first) • weekly & monthly analytics</div>
     </div>
     <div class="pillRow">
-      <span class="pill">Install on iOS: Safari → Share → Add to Home Screen</span>
       <span class="pill">Android: Chrome → ⋮ → Add to Home screen</span>
+      <span class="pill">iOS: Safari → Share → Add to Home Screen</span>
     </div>
   </header>
 
@@ -36,7 +36,7 @@
     <!-- LEFT -->
     <section class="card">
       <div class="cardTitle">Log Food</div>
-      <div class="hint">Search calories/macros by food + serving size. Offline DB + optional Open Food Facts.</div>
+      <div class="hint">Search calories/macros by food + serving grams. Offline DB + optional Open Food Facts (English preferred).</div>
 
       <div class="hr"></div>
 
@@ -109,7 +109,7 @@
 
       <div class="row">
         <button class="btn primary grow" id="btnLog">Log it ✔️</button>
-        <button class="btn ghost grow" id="btnHelp">Help 🤖</button>
+        <button class="btn ghost grow" id="btnHelp">Help 🤔</button>
       </div>
 
       <div class="hr"></div>
